crates/sui-prover/tests/snapshots/pure_functions/pure_callee_fail.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
warning: unused function
   ┌─ tests/inputs/pure_functions/pure_callee_fail.fail.move:13:5
   │
13 │ fun bad_compute(x: u64, y: u64): u64 {
   │     ^^^^^^^^^^^ The non-'public', non-'entry' function 'bad_compute' is never called. Consider removing it.
   │
   = This warning can be suppressed with '#[allow(unused_function)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Function 'pure_callee_fail::checked_sub' is called from a pure function but cannot satisfy pure requirements
  ┌─ tests/inputs/pure_functions/pure_callee_fail.fail.move:6:1
  │  
6 │ ╭ fun checked_sub(x: u64, y: u64): u64 {
7 │ │     assert!(x >= y, 0);
8 │ │     x - y
9 │ │ }
  │ ╰─^
